--- a/paginas/biografia.html
+++ b/paginas/biografia.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
   <title>Quienes Somos - Malagón Saavedra y Cía. S.A.S</title>
   <link rel="stylesheet" href="style.css">
   <!-- Cargar FontAwesome (opcional, para íconos si se requieren) -->
