--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
   <title>Malagón Saavedra y Cía. S.A.S</title>
   <link rel="stylesheet" href="style.css">
   <link
@@ -158,11 +159,9 @@
             <i class="fas fa-map-marker-alt"></i>
             Calle 74 A # 61-30 Barrio San Fernando
             <br>
-            Bogotá - Colombia
-          </p>
+            Bogotá - Colombia</p>
           <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
-<p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
-
+          <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
           <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
           <p><i class="fa-solid fa-scale-balanced"></i>Notificaciones Judiciales: <br>admin@malagonsaavedra.com</p>
         </div>
