--- a/paginas/biografia.html
+++ b/paginas/biografia.html
@@ -57,7 +57,23 @@
   </main>
   
   <footer>
-    <!-- Opcional: Agregar información de contacto y derechos de autor -->
+    <div class="footer-container">
+      <!-- Caja derecha: Contacto y redes (sin íconos) -->
+      <div class="footer-box right-box">
+        <div class="contact-data">
+            <p><i class="fas fa-map-marker-alt"></i>Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
+            <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
+            <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
+            <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
+            <p><i class="fa-solid fa-scale-balanced"></i> Notificaciones Judiciales: <br>admin@malagonsaavedra.com</p>
+          </div>
+        <br>
+      </div>
+    </div>
+          
+    <div class="copyright" style="text-align: center; color: white;">
+      <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
+    </div>
   </footer>
 </body>
 </html>
