--- a/paginas/habeasdata.html
+++ b/paginas/habeasdata.html
@@ -99,7 +99,7 @@
     <div class="footer-container">
       <div class="footer-box right-box">
         <div class="contact-data">
-          <p>CALLE 74 A # 61-30, Barrio San Fernando<br> Bogotá - Colombia</p>
+            <p><i class="fas fa-map-marker-alt"></i>Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
           <p>proyectos@malagonsaavedra.com</p>
           <p>+57 3134128699</p>
         </div>
