--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
         <div class="contact-data">
           <p>
             <i class="fas fa-map-marker-alt"></i>
-            Calle 74 A # 61-30 Barrio San Fernando
-            <br>
-            Bogotá - Colombia</p>
+            Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
           <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
           <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
           <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
