--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
     </nav>
   </header>
 
-  <!-- Sección 1: Galería extendida con título -->
-  <section class="hero" id="inicio">
-    <div class="overlay"></div>
-    <div class="hero-content">
-      <h1>Malagón Saavedra y Cía. S.A.S</h1>
-      <br>
-      <h2>Expertos en Ingeniería Eléctrica</h2>
-    </div>
-  </section>
+<!-- Sección 1: Galería extendida con título -->
+<section class="hero" id="inicio">
+  <div class="overlay"></div>
+  <div class="hero-content">
+    <img src="/img/logo-malagon-saavedra-blanco.png" alt="Logo Malagón Saavedra" class="hero-logo">
+    <h1>Malagón Saavedra y Cía. S.A.S</h1>
+    <br>
+    <h2>Expertos en Ingeniería Eléctrica</h2>
+  </div>
+</section>
+
 
 
 
@@ -155,9 +157,7 @@
           </a>
         </div>
         <div class="contact-data">
-          <p>
-            <i class="fas fa-map-marker-alt"></i>
-            Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
+          <p><i class="fas fa-map-marker-alt"></i>Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
           <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
           <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
           <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
