--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
         <li><a href="/paginas/servicios.html">Servicios</a></li>
         <li><a href="/paginas/biografia.html">Quienes Somos</a></li>
+        <li><a href="/paginas/galería.html">Galería</a></li>
         <li><a href="/paginas/contacto.html">Contáctenos</a></li>
         <li><a href="https://malagonsaavedra.vercel.app/"><i class="fa-solid fa-right-to-bracket"></i></a></li>
       </ul>
