--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -43,7 +43,7 @@ En Malagón Saavedra y Cía S.A.S., trabajamos con dedicación para asegurar que
       <h2>Descarga nuestro Brochure de Servicios</h2>
       <p>Para más detalles sobre nuestros servicios, puedes descargar el siguiente archivo:</p>
       <!-- Ajusta la ruta a tu archivo PDF de brochure -->
-      <a href="/archivos/BROCHURE MALAGON SAAVEDRA 2025.pdf" download class="btn-descargar">Descargar Brochure</a>
+      <a href="/archivos/Brochure-Malagon-Saavedra.pdf" download class="btn-descargar">Descargar Brochure</a>
     </section>
   </main>
 </body>
