--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -23,7 +23,7 @@
     <section class="servicios-intro">
       <div class="servicios-text">
         <p>
-          <h3>SIngeniería Eléctrica en Malagón Saavedra y Cía S.A.S
+          <h3>Ingeniería Eléctrica en Malagón Saavedra y Cía S.A.S
           </h3><br>
 En Malagón Saavedra y Cía S.A.S., somos expertos en ingeniería eléctrica, con un enfoque integral en la automatización de sistemas y la seguridad electrónica. Nuestra amplia experiencia nos ha permitido posicionarnos como líderes en el sector, brindando soluciones a medida que cubren todas las etapas de un proyecto, desde la planeación hasta la entrega final con resultados satisfactorios.
 <br><br>
