--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -155,15 +155,28 @@
 
 <!-- Footer con datos de contacto y normativa -->
 <footer>
+  <style>
+    .footer-container .contact-data {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      align-items: center;
+    }
+  
+    .footer-container .contact-data p {
+      margin: 0;
+    }
+  </style>
+  
   <div class="footer-container">
-    <!-- Caja derecha: Contacto y redes -->
     <div class="contact-data">
-      <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá – Colombia</p>
+      <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá, Colombia</p>
       <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
       <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
       <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
     </div>
   </div>
+  
 
 <div class="copyright" style="text-align: center; color: white;">
   <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
