--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
   <title>Malagón Saavedra y Cía. S.A.S</title>
   <link rel="stylesheet" href="style.css">
@@ -36,7 +36,7 @@
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
         <li><a href="/paginas/servicios.html">Servicios</a></li>
-        <li><a href="/paginas/biografia.html">Quienes Somos</a></li>
+        <li><a href="/paginas/biografia.html">Quiénes Somos</a></li>
         <li><a href="/paginas/galería.html">Galería</a></li>
         <li><a href="/paginas/contacto.html">Contáctenos</a></li>
         <li><a href="https://malagonsaavedra.vercel.app/"><i class="fa-solid fa-right-to-bracket"></i></a></li>
@@ -59,7 +59,22 @@
     <h2>Algunos de nuestros clientes</h2>
     <div class="slider-container">
       <div class="slider-track" id="slider-track">
-        <!-- …tus .slide con logos… -->
+        <div class="slide"><img src="/img/logos/amarilo-logo.png"   alt="Logo Amarilo"></div>
+        <div class="slide"><img src="/img/logos/prodesa-logo.jpg"  alt="Logo Prodesa"></div>
+        <div class="slide"><img src="/img/logos/ar-logo.jpg"       alt="Logo AR"></div>
+        <div class="slide"><img src="/img/logos/prodeco-logo.png"   alt="Logo Prodeco"></div>
+        <div class="slide"><img src="/img/logos/inelco-logo.jpg"   alt="Logo Inelco"></div>
+        <div class="slide"><img src="/img/logos/atyt-logo.jpg"     alt="Logo ATYT"></div>
+        <div class="slide"><img src="/img/logos/cemex-logo.jpg"    alt="Logo Cemex"></div>
+        <div class="slide"><img src="/img/logos/experta-logo.jpg"  alt="Logo Experta"></div>
+        <div class="slide"><img src="/img/logos/8-12-logo.jpg"     alt="Logo OchoDoce"></div>
+        <div class="slide"><img src="/img/logos/apiros-logo.jpg"   alt="Logo Apiros"></div>
+        <div class="slide"><img src="/img/logos/cornisa-logo.jpg"  alt="Logo Coninsa"></div>
+        <div class="slide"><img src="/img/logos/lm-logo.jpg"       alt="Logo LM"></div>
+        <div class="slide"><img src="/img/logos/mendebal-logo.jpg" alt="Logo Mendebal"></div>
+        <div class="slide"><img src="/img/logos/obycon-logo.jpg"   alt="Logo Obycon"></div>
+        <div class="slide"><img src="/img/logos/viconsa-logo.jpg"  alt="Logo Viconsa"></div>
+        <div class="slide"><img src="/img/logos/saner-logo.jpg"    alt="Logo Saner"></div>
       </div>
     </div>
     <button class="arrow prev" id="btn-prev">&#10094;</button>
@@ -74,8 +89,8 @@
         src="https://www.youtube.com/embed/kv5YnR-R7l4?controls=0&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      ></iframe>
+        allowfullscreen>
+      </iframe>
     </div>
     <p class="video-caption">Propiedad de Serena del Mar</p>
   </section>
@@ -84,50 +99,43 @@
   <footer>
     <div class="footer-container">
       <div class="footer-box left-box">
-        <div class="footer-text">
-          <p style="font-size:30px;">¡En Malagón Saavedra se aplica la Normatividad!</p>
-          <p>Reglamento Técnico de Instalaciones Eléctricas RETIE</p>
-          <p>Norma NTC 2050 – Código Eléctrico Colombiano</p>
-          <p>Normas del Operador de Red a nivel nacional</p>
-          <p>IEC - NFPA - NEC - ANSI/TIA/EIA – IEEE</p>
-          <p>Normatividad Nacional sobre Riesgos Profesionales – HSQE</p>
-        </div>
+        <p style="font-size:30px; text-align:center;">¡En Malagón Saavedra se aplica la Normatividad!</p>
+        <p>Reglamento Técnico de Instalaciones Eléctricas RETIE</p>
+        <p>Norma NTC 2050 – Código Eléctrico Colombiano</p>
+        <p>Normas del Operador de Red a nivel nacional</p>
+        <p>IEC - NFPA - NEC - ANSI/TIA/EIA – IEEE</p>
+        <p>Normatividad Nacional sobre Riesgos Profesionales – HSQE</p>
       </div>
       <div class="footer-box right-box">
         <div class="footer-icons">
           <a href="https://facebook.com/…"><i class="fab fa-facebook-f"></i></a>
           <a href="https://instagram.com/…"><i class="fab fa-instagram"></i></a>
-          <a href="https://api.whatsapp.com/send?phone=…"><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=…"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="contact-data">
-          <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Bogotá, Colombia</p>
-          <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
+          <p><i class="fas fa-map-marker-alt"></i> Calle 74 A #61-30, Bogotá, Colombia</p>
+          <p><i class="fas fa-phone"></i> Tel: (601) 5175774</p>
           <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
           <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
         </div>
       </div>
     </div>
     <div class="copyright">
-      <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
+      &copy; 2025 Malagón Saavedra y Cía. S.A.S
     </div>
   </footer>
 
   <!-- Banner de Cookies -->
   <div class="cookie-banner" id="cookie-banner">
-    <p>
-      Este sitio utiliza cookies… 
-      <a href="/paginas/cookies.html">Política de Cookies</a>
-    </p>
+    <p>Este sitio utiliza cookies… <a href="/paginas/cookies.html">Política de Cookies</a></p>
     <button id="accept-cookies">Aceptar</button>
   </div>
 
   <!-- Scripts -->
   <script>
-    document.getElementById('accept-cookies')
-      .addEventListener('click', () => {
-        document.getElementById('cookie-banner')
-          .style.display = 'none';
-      });
+    document.getElementById('accept-cookies').addEventListener('click', () => {
+      document.getElementById('cookie-banner').style.display = 'none';
+    });
   </script>
   <script src="script.js"></script>
   <script src="splash.js"></script>
