--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
   </div>
   <!-- /SPLASH SCREEN -->
 
-  <!-- Header con Navbar -->
+  <!-- Header & Navbar (idéntico a proyectos.html) -->
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="#"><img src="/img/logo-2025.png" alt="MalagonSaavedra"></a>
+        <a href="/"><img src="/img/logo-2025.png" alt="MalagonSaavedra"></a>
       </div>
       <input type="checkbox" id="toggle">
       <label for="toggle" class="hamburger">&#9776;</label>
       <ul class="nav-links">
-        <li><a href="#inicio">Inicio</a></li>
         <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
         <li><a href="/paginas/servicios.html">Servicios</a></li>
         <li><a href="/paginas/biografia.html">Quiénes Somos</a></li>
         <li><a href="/paginas/galería.html">Galería</a></li>
         <li><a href="/paginas/contacto.html">Contáctenos</a></li>
-        <li><a href="https://malagonsaavedra.vercel.app/"><i class="fa-solid fa-right-to-bracket"></i></a></li>
+        <li>
+          <a href="https://malagonsaavedra.vercel.app/">
+            <i class="fa-solid fa-right-to-bracket"></i>
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -59,22 +62,22 @@
     <h2>Algunos de nuestros clientes</h2>
     <div class="slider-container">
       <div class="slider-track" id="slider-track">
-        <div class="slide"><img src="/img/logos/amarilo-logo.png"   alt="Logo Amarilo"></div>
-        <div class="slide"><img src="/img/logos/prodesa-logo.jpg"  alt="Logo Prodesa"></div>
-        <div class="slide"><img src="/img/logos/ar-logo.jpg"       alt="Logo AR"></div>
-        <div class="slide"><img src="/img/logos/prodeco-logo.png"   alt="Logo Prodeco"></div>
-        <div class="slide"><img src="/img/logos/inelco-logo.jpg"   alt="Logo Inelco"></div>
-        <div class="slide"><img src="/img/logos/atyt-logo.jpg"     alt="Logo ATYT"></div>
-        <div class="slide"><img src="/img/logos/cemex-logo.jpg"    alt="Logo Cemex"></div>
-        <div class="slide"><img src="/img/logos/experta-logo.jpg"  alt="Logo Experta"></div>
-        <div class="slide"><img src="/img/logos/8-12-logo.jpg"     alt="Logo OchoDoce"></div>
-        <div class="slide"><img src="/img/logos/apiros-logo.jpg"   alt="Logo Apiros"></div>
-        <div class="slide"><img src="/img/logos/cornisa-logo.jpg"  alt="Logo Coninsa"></div>
-        <div class="slide"><img src="/img/logos/lm-logo.jpg"       alt="Logo LM"></div>
+        <div class="slide"><img src="/img/logos/amarilo-logo.png" alt="Logo Amarilo"></div>
+        <div class="slide"><img src="/img/logos/prodesa-logo.jpg" alt="Logo Prodesa"></div>
+        <div class="slide"><img src="/img/logos/ar-logo.jpg" alt="Logo AR"></div>
+        <div class="slide"><img src="/img/logos/prodeco-logo.png" alt="Logo Prodeco"></div>
+        <div class="slide"><img src="/img/logos/inelco-logo.jpg" alt="Logo Inelco"></div>
+        <div class="slide"><img src="/img/logos/atyt-logo.jpg" alt="Logo ATYT"></div>
+        <div class="slide"><img src="/img/logos/cemex-logo.jpg" alt="Logo Cemex"></div>
+        <div class="slide"><img src="/img/logos/experta-logo.jpg" alt="Logo Experta"></div>
+        <div class="slide"><img src="/img/logos/8-12-logo.jpg" alt="Logo OchoDoce"></div>
+        <div class="slide"><img src="/img/logos/apiros-logo.jpg" alt="Logo Apiros"></div>
+        <div class="slide"><img src="/img/logos/cornisa-logo.jpg" alt="Logo Coninsa"></div>
+        <div class="slide"><img src="/img/logos/lm-logo.jpg" alt="Logo LM"></div>
         <div class="slide"><img src="/img/logos/mendebal-logo.jpg" alt="Logo Mendebal"></div>
-        <div class="slide"><img src="/img/logos/obycon-logo.jpg"   alt="Logo Obycon"></div>
-        <div class="slide"><img src="/img/logos/viconsa-logo.jpg"  alt="Logo Viconsa"></div>
-        <div class="slide"><img src="/img/logos/saner-logo.jpg"    alt="Logo Saner"></div>
+        <div class="slide"><img src="/img/logos/obycon-logo.jpg" alt="Logo Obycon"></div>
+        <div class="slide"><img src="/img/logos/viconsa-logo.jpg" alt="Logo Viconsa"></div>
+        <div class="slide"><img src="/img/logos/saner-logo.jpg" alt="Logo Saner"></div>
       </div>
     </div>
     <button class="arrow prev" id="btn-prev">&#10094;</button>
