--- a/paginas/biografia.html
+++ b/paginas/biografia.html
@@ -4,22 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
-  <title>Quienes Somos - Malagón Saavedra y Cía. S.A.S</title>
+  <title>Quiénes Somos - Malagón Saavedra y Cía. S.A.S</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Cargar FontAwesome (opcional, para íconos si se requieren) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
-        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-…"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
 <body>
-  <!-- Encabezado con logo -->
-  <header class="page-header">
-    <a href="../index.html">
-      <img src="../img/logo-2025-horizontal.png" alt="Logo Malagón Saavedra" class="header-logo">
-    </a>
+
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="/index.html"><img src="/img/logo-2025.png" alt="MalagonSaavedra"></a>
+      </div>
+      <input type="checkbox" id="toggle">
+      <label for="toggle" class="hamburger">&#9776;</label>
+      <ul class="nav-links">
+        <li><a href="/index.html#inicio">Inicio</a></li>
+        <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
+        <li><a href="/paginas/servicios.html">Servicios</a></li>
+        <li><a href="/paginas/galería.html">Galería</a></li>
+        <li><a href="/paginas/contacto.html">Contáctenos</a></li>
+        <li>
+          <a href="https://malagonsaavedra.vercel.app/">
+            <i class="fa-solid fa-right-to-bracket"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  
+
+  <!-- Biografía -->
   <main class="biografia">
-    <h1>Quienes Somos</h1>
+    <h1>Quiénes Somos</h1>
     <p>
       En Malagón Saavedra brindamos soluciones integrales de Ingeniería Eléctrica, respaldadas por más de 35 años de experiencia en el mercado. Nuestro equipo de profesionales altamente capacitados diseña, ejecuta y supervisa proyectos eléctricos con el máximo rigor técnico y en estricto cumplimiento de la normatividad vigente, garantizando confiabilidad, eficiencia y costos competitivos.
     </p>
@@ -56,24 +78,27 @@
     </section>
   </main>
   
+  <!-- Footer -->
   <footer>
     <div class="footer-container">
-      <!-- Caja derecha: Contacto y redes (sin íconos) -->
       <div class="footer-box right-box">
         <div class="contact-data">
-            <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
-            <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
-            <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
-            <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
-            <p><i class="fa-solid fa-scale-balanced"></i> Notificaciones Judiciales: <br>admin@malagonsaavedra.com</p>
-          </div>
-        <br>
+          <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia</p>
+          <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
+          <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
+          <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
+          <p><i class="fa-solid fa-scale-balanced"></i> Notificaciones Judiciales: admin@malagonsaavedra.com</p>
+        </div>
       </div>
     </div>
-          
-    <div class="copyright" style="text-align: center; color: white;">
-      <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
+    <div class="copyright">
+      &copy; 2025 Malagón Saavedra y Cía. S.A.S
     </div>
   </footer>
+
+  <!-- Scripts -->
+  <script>
+    // No hay scripts adicionales para esta página
+  </script>
 </body>
 </html>
