--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
   <title>Contacto - Malagón Saavedra y Cía. S.A.S</title>
   <link rel="stylesheet" href="style.css">
-  <!-- FontAwesome (opcional, se mantiene para el botón de WhatsApp) -->
+  <!-- FontAwesome (para íconos) -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -16,18 +16,34 @@
   />
 </head>
 <body>
-  <!-- Encabezado con el logo (enlace al inicio) -->
-  <header class="page-header">
-    <a href="../index.html">
-      <img src="../img/logo-2025-horizontal.png" alt="Logo Malagón Saavedra" class="header-logo">
-    </a>
+
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="/index.html"><img src="/img/logo-2025.png" alt="MalagonSaavedra"></a>
+      </div>
+      <input type="checkbox" id="toggle">
+      <label for="toggle" class="hamburger">&#9776;</label>
+      <ul class="nav-links">
+        <li><a href="/index.html#inicio">Inicio</a></li>
+        <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
+        <li><a href="/paginas/servicios.html">Servicios</a></li>
+        <li><a href="/paginas/biografia.html">Quiénes Somos</a></li>
+        <li><a href="/paginas/galería.html">Galería</a></li>
+        <li>
+          <a href="https://malagonsaavedra.vercel.app/">
+            <i class="fa-solid fa-right-to-bracket"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Contenido principal (formulario, etc.) con ancho limitado -->
+  <!-- Contenido principal (formulario) -->
   <main class="contacto-page">
     <h1>Contacto</h1>
     
-    <!-- Formulario de contacto -->
     <form action="mailto:proyectos@malagonsaavedra.com" method="post" enctype="multipart/form-data" class="contact-form">
       <div class="form-group">
         <label for="nombre">Nombre <span>*</span></label>
@@ -53,7 +69,6 @@
         <label for="archivo">Adjuntar archivo (opcional)</label>
         <input type="file" id="archivo" name="archivo">
       </div>
-      <!-- Checkbox para aceptar la política de tratamiento de datos -->
       <div class="form-group">
         <input type="checkbox" id="consent" name="consent" required>
         <label for="consent">
@@ -65,7 +80,6 @@
       </div>
     </form>
     
-    <!-- Botón de contacto vía WhatsApp -->
     <div class="whatsapp-contact">
       <a
         href="https://api.whatsapp.com/send?phone=573134128699&text=Hola%20Malag%C3%B3n%20Saavedra%20y%20C%C3%ADa.%20S.A.S"
@@ -78,31 +92,35 @@
     <br>
   </main>
 
-  <!-- Footer fuera del main, para que ocupe 100% de ancho -->
+  <!-- Footer (igual al de proyectos.html) -->
   <footer>
+    <style>
+      .footer-container .contact-data {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        align-items: center;
+      }
+      .footer-container .contact-data p {
+        margin: 0;
+      }
+    </style>
+
     <div class="footer-container">
-      <div class="footer-box right-box">
-        <div class="contact-data">
-          <p>
-            <i class="fas fa-map-marker-alt"></i>
-            Calle 74 A # 61-30 Barrio San Fernando | Bogotá - Colombia
-          </p>
-          <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
-          <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
-          <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
-          <p>
-            <i class="fas fa-balance-scale"></i>
-            Notificaciones Judiciales:
-            <br>admin@malagonsaavedra.com
-          </p>
-        </div>
+      <div class="contact-data">
+        <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá, Colombia</p>
+        <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
+        <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
+        <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
       </div>
     </div>
-    <div style="text-align: center; color: white; margin-top: 20px;">
+
+    <div class="copyright" style="text-align: center; color: white;">
       <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
     </div>
   </footer>
 
-  <script src="scrip.js"></script>
+  <script src="script.js"></script>
+  <script src="splash.js"></script>
 </body>
 </html>
