--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,35 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/img/logo-2025.png">
   <title>Servicios - Malagón Saavedra y Cía. S.A.S</title>
-  <!-- Enlace a tu hoja de estilos principal -->
   <link rel="stylesheet" href="style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-…"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
 <body>
 
-      <!-- Encabezado con logo -->
-  <header class="page-header">
-    <a href="../index.html">
-      <img src="../img/logo-2025-horizontal.png" alt="Logo Malagón Saavedra" class="header-logo">
-    </a>
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="/index.html"><img src="/img/logo-2025.png" alt="MalagonSaavedra"></a>
+      </div>
+      <input type="checkbox" id="toggle">
+      <label for="toggle" class="hamburger">&#9776;</label>
+      <ul class="nav-links">
+        <li><a href="/index.html#inicio">Inicio</a></li>
+        <li><a href="/paginas/proyectos.html">Nuestros Proyectos</a></li>
+        <li><a href="/paginas/biografia.html">Quiénes Somos</a></li>
+        <li><a href="/paginas/galería.html">Galería</a></li>
+        <li><a href="/paginas/contacto.html">Contáctenos</a></li>
+        <li><a href="https://malagonsaavedra.vercel.app/"><i class="fa-solid fa-right-to-bracket"></i></a></li>
+      </ul>
+    </nav>
   </header>
+
   <main class="servicios-page">
     <h1>Nuestros Servicios</h1>
     
     <!-- Sección con texto e imagen -->
     <section class="servicios-intro">
       <div class="servicios-text">
+        <h3>Ingeniería Eléctrica en Malagón Saavedra y Cía. S.A.S</h3>
         <p>
-          <h3>Ingeniería Eléctrica en Malagón Saavedra y Cía S.A.S
-          </h3><br>
-En Malagón Saavedra y Cía S.A.S., somos expertos en ingeniería eléctrica, con un enfoque integral en la automatización de sistemas y la seguridad electrónica. Nuestra amplia experiencia nos ha permitido posicionarnos como líderes en el sector, brindando soluciones a medida que cubren todas las etapas de un proyecto, desde la planeación hasta la entrega final con resultados satisfactorios.
-<br><br>
-Contamos con un equipo altamente capacitado que sabe cómo abordar cada desafío en el ámbito de la ingeniería eléctrica, garantizando siempre un desarrollo profesional y eficiente. Nuestros clientes, tanto en Bogotá como en otras partes de Colombia, confían en nosotros para ser su proveedor de soluciones eléctricas debido a nuestra capacidad para entregar proyectos de alta calidad y ajustados a sus necesidades.
-<br><br>
-En Malagón Saavedra y Cía S.A.S., trabajamos con dedicación para asegurar que cada proyecto se ejecute de manera profesional, segura y con un enfoque en la innovación. Si busca una empresa con experiencia y capacidad en ingeniería eléctrica, nosotros somos su aliado ideal.
+          En Malagón Saavedra y Cía S.A.S., somos expertos en ingeniería eléctrica, con un enfoque integral en la automatización de sistemas y la seguridad electrónica. Nuestra amplia experiencia nos ha permitido posicionarnos como líderes en el sector, brindando soluciones a medida que cubren todas las etapas de un proyecto, desde la planeación hasta la entrega final con resultados satisfactorios.
+        </p>
+        <p>
+          Contamos con un equipo altamente capacitado que sabe cómo abordar cada desafío en el ámbito de la ingeniería eléctrica, garantizando siempre un desarrollo profesional y eficiente. Nuestros clientes, tanto en Bogotá como en otras partes de Colombia, confían en nosotros para ser su proveedor de soluciones eléctricas debido a nuestra capacidad para entregar proyectos de alta calidad y ajustados a sus necesidades.
+        </p>
+        <p>
+          En Malagón Saavedra y Cía S.A.S., trabajamos con dedicación para asegurar que cada proyecto se ejecute de manera profesional, segura y con un enfoque en la innovación. Si busca una empresa con experiencia y capacidad en ingeniería eléctrica, nosotros somos su aliado ideal.
         </p>
       </div>
       <div class="servicios-image">
-        <!-- Ajusta la ruta y el nombre de tu imagen de servicios -->
         <img src="/img/obras/ingenieria-electrica-015.jpg" alt="Imagen de Nuestros Servicios">
       </div>
     </section>
@@ -42,9 +61,46 @@ En Malagón Saavedra y Cía S.A.S., trabajamos con dedicación para asegurar que
     <section class="brochure">
       <h2>Descarga nuestro Brochure de Servicios</h2>
       <p>Para más detalles sobre nuestros servicios, puedes descargar el siguiente archivo:</p>
-      <!-- Ajusta la ruta a tu archivo PDF de brochure -->
       <a href="/archivos/Brochure-Malagon-Saavedra.pdf" download class="btn-descargar">Descargar Brochure</a>
     </section>
   </main>
+
+  <!-- Footer (igual al de proyectos.html) -->
+  <footer>
+    <style>
+      .footer-container .contact-data {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        align-items: center;
+      }
+    
+      .footer-container .contact-data p {
+        margin: 0;
+      }
+    </style>
+  
+    <div class="footer-container">
+      <div class="contact-data">
+        <p><i class="fas fa-map-marker-alt"></i> Calle 74 A # 61-30 Barrio San Fernando | Bogotá, Colombia</p>
+        <p><i class="fas fa-phone"></i> Tel: 601 5175774</p>
+        <p><i class="fas fa-mobile-alt"></i> Cel: +57 3134128699</p>
+        <p><i class="fas fa-envelope"></i> proyectos@malagonsaavedra.com</p>
+      </div>
+    </div>
+  
+    <div class="copyright" style="text-align: center; color: white;">
+      <p>&copy; 2025 Malagón Saavedra y Cía. S.A.S</p>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script>
+    document.getElementById('accept-cookies').addEventListener('click', () => {
+      document.getElementById('cookie-banner').style.display = 'none';
+    });
+  </script>
+  <script src="script.js"></script>
+  <script src="splash.js"></script>
 </body>
 </html>
