--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="/paginas/galería.html">Galería</a></li>
         <li><a href="/paginas/contacto.html">Contáctenos</a></li>
         <li>
-          <a href="https://malagon-ayhj81fok-ticmalagons-projects.vercel.app/">
+          <a href="https://malagon.vercel.app/">
             <i class="fa-solid fa-right-to-bracket"></i>
           </a>
         </li>
@@ -144,4 +144,5 @@
   <script src="splash.js"></script>
 </body>
 </html>
+
 
